--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header class="main-header">
         <nav class="main-nav">
-            <div class="logo">
+            <a class="logo" href="#">
                 <img class="logo-img" src="img/logo.svg" alt="Логотип сайта Кот да Винчи">
                 <h1 class="logo-name">Кот да Винчи</h1>
-            </div>
+            </a>
             <div class="header-registration">
                 <a href="registration.html">Регистрация</a>
             </div>
@@ -22,10 +22,10 @@
     </header>
     <main class="body-main">
         <section class="main-login">
-            <form action="/" method="POST">
+            <form action="/" method="POST" name="login">
                 <h2>Вход в систему</h2>
-                <input class="login" name="login" id="login" type="text" placeholder="Логин">
-                <input class="password" name="password" id="password" type="password" placeholder="Пароль">
+                <input name="login" type="text" placeholder="Логин">
+                <input class="last-input-in-list" name="password" type="password" placeholder="Пароль">
                 <button type="submit">Войти</button>
             </form>
         </section>
@@ -43,7 +43,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="main-footer">
         <ul class="footer-nav">
             <li class="footer-nav-item"><a href="#">О нас</a></li>
             <li class="footer-nav-item"><a href="#">Контакты</a></li>
