--- a/registration.html
+++ b/registration.html
@@ -2,9 +2,40 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <title>Кот да Винчи - регистрация</title>
 </head>
 <body>
-
+    <header class="pages-header">
+        <a class="logo" href="index.html">
+            <img class="logo-img" src="img/logo.svg" alt="Логотип сайта Кот да Винчи">
+            <h1 class="logo-name">Кот да Винчи</h1>
+        </a>
+    </header>
+    <article class="registration">
+        <h2>Регистрация</h2>
+        <form action="/" method="POST" name="registration">
+            <input name="login" type="text" placeholder="Логин">
+            <input name="password" type="password" placeholder="Пароль">
+            <input name="email" type="email" placeholder="Email">
+            <input name="surname" type="text" placeholder="Фамилия">
+            <input name="name" type="text" placeholder="Имя">
+            <input name="patronymic" type="text" placeholder="Отчество">
+            <input name="city" type="text" placeholder="Город">
+            <input name="school" type="text" placeholder="Школа">
+            <input name="class" type="text" placeholder="Класс">
+            <button type="submit">Регистрация</button>
+        </form>
+    </article>
+    <footer class="main-footer">
+        <ul class="footer-nav">
+            <li class="footer-nav-item"><a href="#">О нас</a></li>
+            <li class="footer-nav-item"><a href="#">Контакты</a></li>
+            <li class="footer-nav-item"><a href="#">Материалы</a></li>
+            <li class="footer-nav-item"><a href="#">Вопросы-ответы</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
