--- a/variants.html
+++ b/variants.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <title>Title</title>
+    <title>Кот да Винчи - Варианты</title>
 </head>
 <body>
     <header class="pages-header">
