--- a/variants.html
+++ b/variants.html
@@ -34,7 +34,7 @@
         <section class="variants">
             <h1>Варианты</h1>
             <ul class="variants_list">
-                <li class="variants_list-item"><a href="variant.html">1 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant.html" class="variant-1">1 Вариант</a></li>
                 <li class="variants_list-item"><a href="variant.html">2 Вариант</a></li>
                 <li class="variants_list-item"><a href="variant.html">3 Вариант</a></li>
                 <li class="variants_list-item"><a href="variant.html">4 Вариант</a></li>
@@ -55,5 +55,6 @@
             </ul>
         </footer>
     </main>
+    <!-- <script src="js/comare-answer.js" rel="script"></script> -->
 </body>
 </html>
