Пофиксил нумерацию заданий в варианте

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     </header>
     <main class="body-main">
         <section class="main-login">
-            <form action="/" method="POST" name="login">
+            <form action="#" method="POST" name="login">
                 <h1>Вход в систему</h1>
                 <input name="login" type="text" placeholder="Логин">
                 <input class="last-input-in-list" name="password" type="password" placeholder="Пароль">
-                <button type="submit">Войти</button>
+                <button type="button">Войти</button>
             </form>
         </section>
         <section class="about">
