--- a/variants.html
+++ b/variants.html
@@ -55,6 +55,6 @@
             </ul>
         </footer>
     </main>
-    <!-- <script src="js/comare-answer.js" rel="script"></script> -->
+    <!-- <script src="js/compare-answer.js" rel="script"></script> -->
 </body>
 </html>
