Изменил верстку варианта

--- a/variants.html
+++ b/variants.html
@@ -34,16 +34,16 @@
         <section class="variants">
             <h1>Варианты</h1>
             <ul class="variants_list">
-                <li class="variants_list-item"><a href="variant.html" class="variant-1">1 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">2 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">3 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">4 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">5 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">6 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">7 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">8 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">9 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">10 Вариант</a><li>
+                <li class="variants_list-item"><a href="variant_old.html" class="variant-1">1 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_old.html">2 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_old.html">3 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_old.html">4 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_old.html">5 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_old.html">6 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_old.html">7 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_old.html">8 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_old.html">9 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_old.html">10 Вариант</a><li>
             </ul>
         </section>
         <footer class="main-footer">
