Добавил вариант на сайт

--- a/variant_old.html
+++ b/variant_old.html
@@ -38,7 +38,7 @@
                         <div class="task-wrapper">
                             <div class="number">1.</div>
                             <p>На рисунке схема дорог Н-ского района изображена в виде графа, в таблице содержатся сведения о протяжённости каждой из этих дорог (в километрах).</p>
-                            <img src="img/task1.jpg" alt="Изображение к заданию 1">
+                            <img src="img/variant_1/task1.jpg" alt="Изображение к заданию 1">
                             <p>Так как таблицу и схему рисовали независимо друг от друга, то нумерация населённых пунктов в таблице никак не связана с буквенными обозначениями на графе. Определите, какова сумма протяжённостей дорог из пункта D в пункт B и из пункта F в пункт A. <br>В ответе запишите целое число.</p>
                             <form>
                                 <input type="text" id="t-1">
@@ -50,12 +50,12 @@
                         <div class="task-wrapper">
                             <div class="number">2.</div>
                             <p>Миша заполнял таблицу истинности логической функции F  ¬ (y → x) ∨ (z → w) ∨ ¬z,   но успел заполнить лишь фрагмент из трёх различных её строк, даже не указав, какому столбцу таблицы соответствует каждая из переменных w, x, y, z.</p>
-                            <img src="img/task2-1.jpg" alt="Изображение к заданию 2">
+                            <img src="img/variant_1/task2-1.jpg" alt="Изображение к заданию 2">
                             <p>Определите, какому столбцу таблицы соответствует каждая из переменных w, x, y, z.
                                 В ответе напишите буквы w, x, y, z в том порядке, в котором идут соответствующие им столбцы (сначала буква, соответствующая
                                 первому столбцу; затем буква, соответствующая второму столбцу, и т. д.). Буквы в ответе пишите подряд, никаких разделителей между
                                 буквами ставить не нужно.<br>Пример. Функция F задана выражением ¬ x ∨ y, зависящим от двух переменных, а фрагмент таблицы имеет следующий вид</p>
-                            <img src="img/task2-2.jpg" alt="Изображение к заданию 2">
+                            <img src="img/variant_1/task2-2.jpg" alt="Изображение к заданию 2">
                             <p>В этом случае первому столбцу соответствует переменная y, а второму столбцу — переменная x. В ответе следует написать: yx.</p>
                             <form>
                                 <input type="text" id="t-2">
@@ -69,13 +69,13 @@
                             <p>В файле приведён фрагмент базы данных «Продукты» о поставках товаров в магазины районов города. База данных состоит из трёх таблиц.</p>
                             <a href="https://inf-ege.sdamgia.ru/get_file?id=115863">Задание три</a>
                             <p>Таблица «Движение товаров» содержит записи о поставках товаров в магазины в течение первой декады июня 2021 г., а также информацию о проданных товарах. Поле Тип операции содержит значение Поступление или Продажа, а в соответствующее поле Количество упаковок, шт. занесена информация о том, сколько упаковок товара поступило в магазин или было продано в течение дня. Заголовок таблицы имеет следующий вид.</p>
-                            <img src="img/task3-1.jpg" alt="Изображение к заданию 3">
+                            <img src="img/variant_1/task3-1.jpg" alt="Изображение к заданию 3">
                             <p>Таблица «Товар» содержит информацию об основных характеристиках каждого товара. Заголовок таблицы имеет следующий вид.</p>
-                            <img src="img/task3-2.jpg" alt="Изображение к заданию 3">
+                            <img src="img/variant_1/task3-2.jpg" alt="Изображение к заданию 3">
                             <p>Таблица «Магазин» содержит информацию о местонахождении магазинов. Заголовок таблицы имеет следующий вид.</p>
-                            <img src="img/task3-3.jpg" alt="Изображение к заданию 3">
+                            <img src="img/variant_1/task3-3.jpg" alt="Изображение к заданию 3">
                             <p>На рисунке приведена схема указанной базы данных.</p>
-                            <img src="img/task3-4.jpg" alt="Изображение к заданию 3">
+                            <img src="img/variant_1/task3-4.jpg" alt="Изображение к заданию 3">
                             <p>Используя информацию из приведённой базы данных, определите общий вес (в кг) крахмала картофельного, поступившего в магазины Заречного района за период с 1 по 8 июня включительно.В ответе запишите только число.</p>
                             <form>
                                 <input type="text" id="t-3">
@@ -231,7 +231,7 @@
                         <div class="task-wrapper">
                             <div class="number">13.</div>
                             <p>На рисунке представлена схема дорог, связывающих города А, Б, В, Г, Д, Е, Ж, И, К, Л. По каждой дороге можно двигаться только в одном направлении, указанном стрелкой.<br>Определите количество различных путей ненулевой длины, которые начинаются и заканчиваются в городе Е, не содержат этот город в качестве промежуточного пункта и проходят через промежуточные города не более одного раза.</p>
-                            <img src="img/task13.jpg" alt="Изображение к заданию 13">
+                            <img src="img/variant_1/task13.jpg" alt="Изображение к заданию 13">
                             <form>
                                 <input type="text" id="t-13">
                                 <button type="button" class="check-answer__button" id="v-1_t-13">Ответить</button>
@@ -293,7 +293,7 @@
                                 Определите максимальную и минимальную денежные суммы, которые может собрать Робот, пройдя из левой верхней клетки в правую нижнюю. В ответе укажите два числа — сначала максимальную сумму, затем минимальную.</p>
                             <a href="https://inf-ege.sdamgia.ru/get_file?id=115867">18.xlsx</a>
                             <p> Исходные данные представляют собой электронную таблицу размером N × N, каждая ячейка которой соответствует клетке квадрата. Внутренние и внешние стены обозначены утолщенными линиями.<br>Пример входных данных:</p>
-                            <img src="img/task18.jpg" alt="Изображение к заданию 18">
+                            <img src="img/variant_1/task18.jpg" alt="Изображение к заданию 18">
                             <p>Для указанных входных данных ответом должна быть пара чисел 38 и 22.</p>
                             <form>
                                 <input type="text" id="t-18">
@@ -355,7 +355,7 @@
                             <div class="number">22.</div>
                             <p>В файле содержится информация о совокупности N вычислительных процессов, которые могут выполняться параллельно или последовательно. Будем говорить, что процесс B зависит от процесса A, если для выполнения процесса B необходимы результаты выполнения процесса A. В этом случае процессы могут выполняться только последовательно. <br> Информация о процессах представлена в файле в виде таблицы. В первом столбце таблицы указан идентификатор процесса (ID), во втором столбце таблицы — время его выполнения в миллисекундах, в третьем столбце перечислены с разделителем «;» ID процессов, от которых зависит данный процесс. Если процесс является независимым, то в таблице указано значение 0. <br> Типовой пример организации данных в файле:
                             </p>
-                            <img src="img/task22.jpg" alt="Изображение к заданию 22">
+                            <img src="img/variant_1/task22.jpg" alt="Изображение к заданию 22">
                             <p>Определите минимальное время, через которое завершится выполнение всей совокупности процессов, при условии, что все независимые друг от друга процессы могут выполняться параллельно.<br>Выполните задания, используя данные из файла ниже:</p>
                             <a href="https://inf-ege.sdamgia.ru/get_file?id=115989">Задание 22</a>
                             <form>
