--- a/variant_1.html
+++ b/variant_1.html
@@ -394,6 +394,6 @@
         </ul>
     </footer>
 </main>
-<script src="js/compare-answer.js" rel="script"></script>
+<script src="js/compare-answer.js" type="module"></script>
 </body>
 </html>
