--- a/variant_2.html
+++ b/variant_2.html
@@ -525,6 +525,6 @@
         </ul>
     </footer>
 </main>
-<script src="js/compare-answer.js" rel="script"></script>
+<script src="js/compare-answer.js" type="module"></script>
 </body>
 </html>
