--- a/variant_3.html
+++ b/variant_3.html
@@ -534,6 +534,6 @@
     </ul>
   </footer>
 </main>
-<script src="js/compare-answer.js" rel="script"></script>
+<script src="js/compare-answer.js" type="module"></script>
 </body>
 </html>
