--- a/variants.html
+++ b/variants.html
@@ -34,16 +34,16 @@
         <section class="variants">
             <h1>Варианты</h1>
             <ul class="variants_list">
-                <li class="variants_list-item"><a href="variant.html" class="variant-1">1 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">2 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">3 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">4 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">5 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">6 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">7 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">8 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">9 Вариант</a></li>
-                <li class="variants_list-item"><a href="variant.html">10 Вариант</a><li>
+                <li class="variants_list-item"><a href="variant_1.html" class="variant-1">1 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_2.html">2 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_3.html">3 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_4.html">4 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_5.html">5 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_6.html">6 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_7.html">7 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_8.html">8 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_9.html">9 Вариант</a></li>
+                <li class="variants_list-item"><a href="variant_10.html">10 Вариант</a><li>
             </ul>
         </section>
         <footer class="main-footer">
