Добавил еще вариантов

--- a/variant_2.html
+++ b/variant_2.html
@@ -405,7 +405,7 @@
                 <li class="variant-task" id="v2t24">
                     <div class="task-wrapper">
                         <div class="number">24.</div>
-                        <p>ТТекстовый файл содержит только заглавные буквы латинского
+                        <p>Текстовый файл содержит только заглавные буквы латинского
                             алфавита(ABC…Z). Определите максимальное количество идущих подряд
                             символов, среди которых не более двух букв D. </p>
                         <span class="expression">согласная + гласная.</span>
