--- a/variant.html
+++ b/variant.html
@@ -15,7 +15,7 @@
                 <h2 class="logo-name">Кот да Винчи</h2>
             </a>
             <div class="user-info">
-                <img src="img/avatar.jpg" alt="Ваш аватар" width="75">
+                <img src="img/avatar.jpg" alt="Ваш аватар" width="75" height="75">
                 <div class="pages-header-stats">
                     <p class="user-info-happiness">Настроение: <span class="user-info-happiness__amount">123 XP</span></p>
                     <div class="user-info-happiness__level"></div>
