--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h2 class="logo-name">Кот да Винчи</h2>
             </a>
             <div class="header-registration">
-                <a href="registration.html">Регистрация</a>
+                <a href="variants.html">Регистрация</a>
             </div>
 
         </nav>
